manifests/01-namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app-ns
  labels:
    name: app-ns
    type: application
---
apiVersion: v1
kind: Namespace
metadata:
  name: external-ns
  labels:
    name: external-ns
    type: external
